--- a/src/main/webapp/static/css/graphs.css
+++ b/src/main/webapp/static/css/graphs.css
@@ -44,11 +44,10 @@
 }
 
 .vis-item.experimental {
+	background-image: linear-gradient(to bottom,#5cb85c 0,#4cae4c 100%);
+	border-color: #4cae4c;
 	color: white;
-	background-color: #5bc0de;
-	border-color: #2aabd2;
 	font-family: monospace;
-	box-shadow: 0 0 10px gray;
 }
 
 /* gray background in weekends, white text color */
