--- a/src/main/webapp/static/css/graphs.css
+++ b/src/main/webapp/static/css/graphs.css
@@ -3,9 +3,10 @@
 .vis-item {
 	height: 16px;
 	font-size: 8pt;
-	
+	background-image: none;
+	color: #333;
+	background-color: #f4f4f4;
 	border-color: #ccc;
-	background-image: linear-gradient(to bottom,#f2f2f2 0,#e0e0e0 100%);
 }
 
 .vis-timeline {
@@ -13,9 +14,17 @@
 }
 
 .vis-item.critical {
-	background-image: linear-gradient(to bottom,#d9534f 0,#c12e2a 100%);
+	background-image: linear-gradient(to bottom, #d9534f 0, #c12e2a 100%);
 	border-color: #b92c28;
 	color: white;
+	font-family: monospace;
+}
+
+.vis-item.immature {
+	background-image: none;
+	background-color: transparent;
+	border-color: #ccc;
+	color: #ccc;
 	font-family: monospace;
 }
 
@@ -30,16 +39,18 @@
 }
 
 .vis-item.important {
-	
-	border-color: #3277b3;
-	background-image: linear-gradient(to bottom,#3884c7 0,#337ab7 100%);
-	color: white;
+	background-image: none;
+	color: #fff;
+	background-color: #337ab7;
+	border-color: #2e6da4;
 	font-family: monospace;
 }
 
 .vis-item.warning {
-	background-image: linear-gradient(to bottom,#f0ad4e 0,#eb9316 100%);
-	border-color: #e38d13;
+	background-image: none;
+	background-color: #f0ad4e;
+	color: white;
+	border-color: #eea236;
 	font-family: monospace;
 }
 
@@ -59,7 +70,7 @@
 }
 
 .vis-item.experimental {
-	background-image: linear-gradient(to bottom,#5cb85c 0,#4cae4c 100%);
+	background-image: linear-gradient(to bottom, #5cb85c 0, #4cae4c 100%);
 	border-color: #4cae4c;
 	color: white;
 	font-family: monospace;
